# Takeoff-and-landing-on-a-moving-platform

./: README.md
Firmware/launch/: launch_simulation.sh
Firmware/models/camera/: model.config  model.sdf
Firmware/models/depth_camera/: depth_camera.sdf
Firmware/models/landing_pad/: model.config  model.sdf
Firmware/models/landing_pad/materials/scripts/: landing_pad.material
Firmware/models/uav_test_vehicle/: model.config  uav_test_vehicle.sdf
Firmware/plugins/: gazebo_model_push_plugin.cc
Firmware/worlds/: uav_test_vehicle.world
ROS/landing_pad_detector/: CMakeLists.txt  package.xml
ROS/landing_pad_detector/launch/: detect_landing_pad.launch  find_object2d.launch
ROS/landing_pad_detector/msg/: Detected_position.msg
ROS/landing_pad_detector/src/: position_publisher_node.cpp
ROS/mission_controller/: CMakeLists.txt  package.xml
ROS/mission_controller/src/: mission_controller_node.cpp
ROS/path_estimator/: CMakeLists.txt  package.xml
ROS/path_estimator/msg/: Estimated_path.msg
ROS/path_estimator/src/: kalman_filter.hpp  path_estimator_node.cpp
ROS/simulation_package/: CMakeLists.txt  package.xml
ROS/simulation_package/launch/: mavros_posix_sitl.launch  simulation.launch
ROS/simulation_package/src/: initiate_drone_node.cpp
Results/: camera_precision_test.csv  detector_moving_pad.txt  detector_precision.txt  kalman_measurements_test.csv  kalman_test.txt
